--- a/templates/enhanced_index.html
+++ b/templates/enhanced_index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>춘천시 AI 도우미 - 춘이 🌸</title>
+    
+    <!-- 파비콘 설정 -->
+    <link rel="icon" type="image/svg+xml" href="/static/images/favicon.svg">
+    <link rel="alternate icon" href="/static/images/favicon.svg">
+    <link rel="mask-icon" href="/static/images/favicon.svg" color="#2c5282">
     <style>
         * {
             margin: 0;
